--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,9 @@ dependencies {
     // Gson (JSON parser) Library
     implementation 'com.google.code.gson:gson:2.8.6'
 
+    // Picasso Library
+    implementation 'com.squareup.picasso:picasso:2.71828' 
+
     // Test Libraries
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
