--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,9 +57,15 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
+    // ReactiveX dependencies
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.20'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
     // Retrofit dependencies
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    def retrofitVersion = '2.9.0'
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
 
     //noinspection GradleDependency
     implementation 'com.squareup.okhttp3:logging-interceptor:3.14.9'
@@ -68,7 +74,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
 
     // Picasso Library
-    implementation 'com.squareup.picasso:picasso:2.71828' 
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     // Test Libraries
     testImplementation 'junit:junit:4.13'
