--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,9 +53,27 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
+    implementation 'androidx.core:core:1.3.2'
+    implementation 'androidx.media:media:1.2.1'
+    implementation 'androidx.legacy:legacy-support-core-utils:1.0.0'
+    implementation 'androidx.legacy:legacy-support-core-ui:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+
+    implementation 'androidx.fragment:fragment:1.3.0'
+
     // Basic Android components
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+
+    // Lifecycle components
+    def LifecycleVersion = '2.3.0'
+    implementation "androidx.lifecycle:lifecycle-runtime:$LifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-livedata:$LifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$LifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$LifecycleVersion"
+
+    // Material Design components
+    implementation 'com.google.android.material:material:1.3.0'
 
     // ReactiveX dependencies
     implementation 'io.reactivex.rxjava2:rxjava:2.2.20'
